06.service/external-svc-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: 1.1.1.1 # 외부 서버
  ports:
  - port: 80
