06.service/kubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer
  selector: 
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
