06.service/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport

spec:
  type: NodePort
  selector:
    app: kubia
# externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
