06.service/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  selector:
    app: kubia
  ports:
  - name: http
    port: 80
    targetPort: 8080    
  - name: https # multi port 가능(name 지정해줘야 함)
    port: 443
    targetPort: 8443
